@@ -30,7 +30,7 @@
 }
 
 \value{
-  Returns (invisibly) the pathname of the generated document.
+  Returns the pathname of the generated document.
 }
 
 \author{Henrik Bengtsson}
